--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "major",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -9,7 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^15.1.3",
+    "@prisma/client": "^6.3.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "next": "^15.1.6",
+    "pg": "^8.13.1",
+    "prisma": "^6.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
