--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^6.3.1",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.4.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -19,9 +20,11 @@
     "pg": "^8.13.1",
     "prisma": "^6.3.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
+    "recharts": "^2.15.1",
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
