--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.2",
     "next": "^15.1.6",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.0",
     "pg": "^8.13.1",
     "prisma": "^6.3.1",
     "react": "^19.0.0",
